--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -11,6 +11,34 @@
 
 	/*SIZES*/
 	--email-text_size: 20px;
-	--aside-text_size: 18px;	
-	--personalName-text_size: 30px;	
+	--aside-text_size: 18px;
+	--personalName-text_size: 30px;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+.svg-images {
+	width: 40px;
+	height: 40px;
+}
+
+body {
+	width: 100%;
+}
+
+#root {
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+	grid-template-rows: 1fr 6fr;
+	grid-template-areas: "  .   header"
+						 "aside main";
+
+	background: var(--bg_color);
+
+	width: 100%;
+	height: 100%;
 }
