--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -32,11 +32,17 @@
 
 body {
 	width: 100%;
-	height: 200vh;
 }
 
 #root {
 	background: var(--bg_color);
+
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+	grid-template-rows: 1fr 14fr;
+	grid-template-areas:
+		".     header"
+		"aside	main";
 
 	width: 100%;
 	height: 100%;
