--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -14,6 +14,8 @@
 	--aside-text_size: 22px;
 	--personalName-text_size: 40px;
 
+	--title-photocard_size: 20px;
+
 	--width: 100%;
 	--height: 100vh;
 }
@@ -32,14 +34,12 @@
 
 body {
 	width: 100%;
+	background: var(--bg_color);
 }
 
 #root {
-	background: var(--bg_color);
-
 	display: grid;
 	grid-template-columns: 1fr 4fr;
-	grid-template-rows: 1fr 14fr;
 	grid-template-areas:
 		".     header"
 		"aside	main";
