--- a/react/src/components/Aside/index.css
+++ b/react/src/components/Aside/index.css
@@ -122,6 +122,7 @@ nav li {
 		transition-duration: 0.3s;
 	}
 
+
 	.aside.on {
 		justify-content: flex-start;
 
@@ -130,8 +131,12 @@ nav li {
 		background: var(--bg_color);
 	}
 
-	.aside.on .one {
-		transform: rotate(45deg) translate(7px, 7px);
+	.aside.on .menu-toggle {
+		margin-left: 1.2em;
+	}
+
+		.aside.on .one {
+		transform: rotate(45deg) translate(6px, 6px);
 	}
 
 	.aside.on .two {
@@ -139,7 +144,7 @@ nav li {
 	}
 
 	.aside.on .three {
-		transform: rotate(-45deg) translate(7.5px, -9px);
+		transform: rotate(-45deg) translate(7px, -6px);
 	}
 
 	.aside.on nav {
