--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@700&family=Ropa+Sans&family=Sawarabi+Mincho&display=swap');
-
 :root {
 	/*FONTS*/
 	--email_font: "Ropa Sans";
@@ -7,7 +5,7 @@
 	--personalName_font: "Rokkitt";
 
 	/*COLORS*/
-	--bg_color: #EBE2E2;
+	--bg_color: #16181C;
 
 	/*SIZES*/
 	--email-text_big-size: 20px;
@@ -34,6 +32,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	list-style: none;
+	color: white;
 }
 
 body {
