--- a/react/src/components/PhotoViewer/index.css
+++ b/react/src/components/PhotoViewer/index.css
@@ -1,5 +1,6 @@
-main {
+.photo-viewer {
 	grid-area: main;
+	margin-top: 10%;
 }
 
 .page-title {
@@ -8,7 +9,6 @@ main {
 
 h1 {
 	display: inline-block;
-
 	font-family: var(--personalName_font);	color: white;
 	
 	padding: 0.2em;
@@ -16,48 +16,44 @@ h1 {
 	border-bottom: 2px solid white;
 }
 
-.photo-galery {
-	display: grid;
-	grid-template-columns: repeat(1, 1fr);
-	grid-gap: 2em;
-
-	margin: 15% 12% 0 6%;
-}
 
 @media screen and (max-width: 600px) {
 	h1 {
 		font-size: 2.5em;
-		margin-top: 0.8em;
 	}
 
 	.photo-galery {
-		margin: 10% 10%;
+		display: flex;
+		flex-direction: column;
+		margin-top: 2em;
+
 	}
 }
 
 @media screen and (min-width: 601px) {
+	.photo-viewer {
+		margin-top: 15%;
+	}
+
 	h1 {
 		font-size: 3em;
-		margin-top: 2.5em;
 	}
 
 	.photo-galery {
+		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		margin: 8% 3% 0 -1%;
+		margin: 3em 3em 0 3em;
 	}
 
 }
 
 @media screen and (min-width: 1000px) {
-	h1 {
-		font-size: 3.5em;
+	.photo-viewer {
+		margin-top: 10%;
 	}
 
 	.photo-galery {
 		grid-template-columns: repeat(4, 1fr);
 		grid-gap: 3em;
-
-		margin: 5% 3% 0 -1%;
-
 	}
 }
