--- a/react/src/styles.css
+++ b/react/src/styles.css
@@ -42,10 +42,10 @@ body {
 
 #root {
 	display: grid;
-	grid-template-columns: 1fr 4fr;
+	grid-template-columns: 1fr 5fr;
 	grid-template-areas:
-		".     header"
-		"aside	main";
+		".		 ."
+		". main";
 
 	width: 100%;
 	height: 100%;
@@ -53,7 +53,7 @@ body {
 
 @media screen and (max-width: 600px) {
 	#root {
-	grid-template-columns: 1fr 5fr;
+	grid-template-rows: 1fr;
 		grid-template-areas:
 			"aside header"
 			"main main";
