--- a/frontend/src/components/AboutMe/AboutMe.module.css
+++ b/frontend/src/components/AboutMe/AboutMe.module.css
@@ -1,8 +1,8 @@
-.about-me {
+.aboutMe {
 	grid-area: main;
 }
 
-.about-img {
+.aboutImg {
 	width: 100%;
 	height: 100vh;
 
@@ -10,22 +10,21 @@
 	background-size: cover;
 }
 
-.about-img-box {
-	padding: 10em 0 0 5em;
+.aboutImgBox {
+	padding: 10rem 0 0 5rem;
 }
 
 .welcome p {
 	font-family: var(--personalName_font);
-	font-size: 3em;
+	font-size: 3rem;
 }
 
-.color-neon {
+.colorNeon {
 	color: #19E4F1;
 }
 
-.about-img-box .description p{
+.aboutImgBox .description p{
 	font-family: var(--personalName_font);
-	font-size: 2em;
-
-	margin: 2em 0 0 0.5em;
+	font-size: 2rem;
+	margin: 2rem 0 0 1rem;
 }
