--- a/frontend/src/components/Aside/Aside.module.css
+++ b/frontend/src/components/Aside/Aside.module.css
@@ -1,7 +1,7 @@
 .aside {
 	grid-area: aside;
 	position: fixed;
-	top: 7em;
+	top: 7rem;
 	display: flex;
 	justify-content: center;
 
@@ -9,14 +9,14 @@
 	height: 100%;
 }
 
-.personal-name {
+.personalName {
 	color: #19E4F1;
 	font-family: var(--personalName_font);
 	font-size: var(--personalName-small_size);
 }
 
 nav > ul {
-	margin-left: 0.8em;
+	margin-left: 0.8rem;
 	font-family: var(--aside_font);
 
 }
@@ -38,7 +38,7 @@ li a {
 }
 
 nav li {
-	line-height: 2em;
+	line-height: 2.5rem;
 
 }
 
@@ -47,12 +47,12 @@ nav li {
 }
 
 .albums li {
-	margin-left: 1em;
+	margin-left: 1rem;
 }
 
-.socialmedia-links {
+.socialmediaLinks {
 	position: fixed;
-	bottom: 1.5em;
+	bottom: 1.5rem;
 	width: 15%;
 
 	display: flex;
@@ -60,7 +60,7 @@ nav li {
 
 }
 
-.socialmedia-links .svg-images {
+.socialmediaLinks .svgImages {
 	width: 23px;
 	height: 23px;
 	margin: 0 10%;
@@ -68,29 +68,29 @@ nav li {
 
 }
 
-.socialmedia-links #instagram-icon {
+.socialmediaLinks #instagramIcon {
 	background: url('../../assets/icon-instagram.svg');
 }
 
-.socialmedia-links #instagram-icon:hover {
+.socialmediaLinks #instagramIcon:hover {
 	background: url('../../assets/instagram-colorful.svg');
 }
 
-.socialmedia-links #whatsapp-icon {
+.socialmediaLinks #whatsappIcon {
 	background: url('../../assets/icon-whatsapp.svg');
 
 }
 
-.socialmedia-links #whatsapp-icon:hover {
+.socialmediaLinks #whatsappIcon:hover {
 	background: url('../../assets/whatsapp-colorful.svg');
 }
 
 .divisory {
 	position: fixed;
-	top: 6em; left: calc(var(--width) - 83.5%);
+	top: 6rem; left: calc(var(--width) - 83.5%);
 
 	width: 2px;
-	height: calc(var(--height) - 8em);
+	height: calc(var(--height) - 8rem);
 
 	background: white;
 }
@@ -102,16 +102,16 @@ nav li {
 	}
 
 	nav,
-	.socialmedia-links,
+	.socialmediaLinks,
 	.divisory {
 		display: none;
 	}
 
-	.menu-toggle {
+	.menuToggle {
 		width: 35px;
 		height: 40px;
 
-		margin: 0.5em;
+		margin: 0.5rem;
 		cursor: pointer;
 	}
 
@@ -135,7 +135,7 @@ nav li {
 		background: var(--bg_color);
 	}
 
-	.aside.on .menu-toggle {
+	.aside.on .menuToggle {
 		position: absolute;
 		left: 2%;
 	}
@@ -161,39 +161,37 @@ nav li {
 		align-items: center;
 }
 
-	.aside.on nav .personal-name {
+	.aside.on nav .personalName {
 		font-size: var(--personalName-big_size);
-
-		margin-top: 2em;
 	}
 
 	.aside.on nav > ul {
-		margin-right: 7em;
+		margin-right: 7rem;
 	}
 
 	.aside.on ul li {
-		margin-left: 1em;
+		margin-left: 1rem;
 		font-size: var(--aside-text_big-size);
 	}
 
 
-	.aside.on .socialmedia-links {
+	.aside.on .socialmediaLinks {
 		display: flex;
 		align-items: center;
 		width: 100%;
 		height: 10%;
 	}
 
-	.aside.on .socialmedia-links .svg-images{
+	.aside.on .socialmediaLinks .svgImages{
 		width: 40px;
 		height: 40px;
 	}
 
-	.socialmedia-links #whatsapp-icon {
+	.socialmediaLinks #whatsappIcon {
 		background: url('../../assets/whatsapp-colorful.svg');
 	}
 
-	.socialmedia-links #instagram-icon {
+	.socialmediaLinks #instagramIcon {
 		background: url('../../assets/instagram-colorful.svg');
 	}
 
@@ -205,7 +203,7 @@ nav li {
 		text-align: center;
 	}
 
-	.socialmedia-links .svg-images {
+	.socialmediaLinks .svgImages {
 		width: 28px;
 		height: 28px;
 	}
@@ -216,7 +214,7 @@ nav li {
 		font-size: var(--aside-text_small-size);
 	}
 
-	.socialmedia-links .svg-images {
+	.socialmediaLinks .svgImages {
 		width: 40px;
 		height: 40px;
 	}	
@@ -224,7 +222,7 @@ nav li {
 }
 
 @media screen and (min-width: 1050px) {
-	.personal-name {
+	.personalName {
 		font-size: var(--personalName-medium_size);
 	}
 
@@ -232,7 +230,7 @@ nav li {
 		font-size: var(--aside-text_big-size);
 	}
 
-	.socialmedia-links .svg-images {
+	.socialmediaLinks .svgImages {
 		width: 45px;
 		height: 45px;
 	}
@@ -240,7 +238,7 @@ nav li {
 }
 
 @media screen and (min-width: 1400px) {
-	.personal-name {
+	.personalName {
 		font-size: var(--personalName-big_size);
 	}
 }
