--- a/frontend/src/components/PhotoViewer/PhotoViewer.module.css
+++ b/frontend/src/components/PhotoViewer/PhotoViewer.module.css
@@ -1,9 +1,8 @@
-.photo-viewer {
+.photoViewer {
 	grid-area: main;
-	margin-top: 10%;
 }
 
-.page-title {
+.pageTitle {
 	text-align: center;
 }
 
@@ -11,7 +10,7 @@ h1 {
 	display: inline-block;
 	font-family: var(--personalName_font);	color: white;
 	
-	padding: 0.2em;
+	padding: 0.2rem;
 	border-top: 2px solid white;
 	border-bottom: 2px solid white;
 }
@@ -19,41 +18,43 @@ h1 {
 
 @media screen and (max-width: 600px) {
 	h1 {
-		font-size: 2.5em;
+		font-size: 2.5rem;
+		margin-top: 2rem;
 	}
 
-	.photo-galery {
+	.photoGalery {
 		display: flex;
 		flex-direction: column;
+		justify-content: center;
 		margin-top: 2em;
 
 	}
 }
 
 @media screen and (min-width: 601px) {
-	.photo-viewer {
+	.photoViewer {
 		margin-top: 15%;
 	}
 
 	h1 {
-		font-size: 3em;
+		font-size: 3rem;
 	}
 
-	.photo-galery {
+	.photoGalery {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		margin: 3em 3em 0 3em;
+		margin: 3rem 3rem 0 3rem;
+		grid-gap: 3rem;
 	}
 
 }
 
 @media screen and (min-width: 1000px) {
-	.photo-viewer {
+	.photoViewer {
 		margin-top: 10%;
 	}
 
-	.photo-galery {
+	.photoGalery {
 		grid-template-columns: repeat(4, 1fr);
-		grid-gap: 3em;
 	}
 }
