--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,6 +6,7 @@
 
 	/*COLORS*/
 	--bg_color: #16181C;
+	--neon_color: #19E4F1;
 
 	/*SIZES*/
 	--email-text_big-size: 20px;
@@ -57,4 +58,5 @@ body {
 	grid-template-areas:
 		"aside header"
 		"main main";
+	}
 }
