--- a/frontend/src/components/EmailBar/EmailBar.module.css
+++ b/frontend/src/components/EmailBar/EmailBar.module.css
@@ -1,10 +1,7 @@
-header {
-	grid-area: header;
-}
-
 .emailBar {
+	grid-area: header;
 	width: 100%;
-	background: var(--bg_color)
+	background: var(--bg_color);
 }
 
 .emailBar > .content {
@@ -44,11 +41,11 @@ header {
 @media screen and (min-width: 600px) {
 	.emailBar {
 		position: fixed;
-		left: calc(var(--width) - 82%);
+		left: calc(var(--width) - 83.4%);
 	}
 
 	.emailBar > .content {
-		margin: 2% 0 0.5% 1%;
+		margin: 2% 0 0.5% 2%;
 	}
 
 	#email {
@@ -57,5 +54,6 @@ header {
 
 	#line {
 		width: calc(var(--width) - 25%);
+		margin-left: 2rem;
 	}
 }
