--- a/frontend/src/components/EmailBar/EmailBar.module.css
+++ b/frontend/src/components/EmailBar/EmailBar.module.css
@@ -12,6 +12,7 @@
 .emailSvg {
 		width: 40px;
 		height: 40px;
+		filter: brightness(0) saturate(100%) invert(87%) sepia(40%) saturate(3586%) hue-rotate(137deg) brightness(97%) contrast(96%);
 	}
 
 #email {
@@ -44,8 +45,8 @@
 		left: calc(var(--width) - 83.4%);
 	}
 
-	.emailBar > .content {
-		margin: 2% 0 0.5% 2%;
+	.emailBar .content {
+		padding: 2% 0 0.5% 5%;
 	}
 
 	#email {
@@ -55,5 +56,11 @@
 	#line {
 		width: calc(var(--width) - 25%);
 		margin-left: 2rem;
+	}
+}
+
+@media screen and (min-width: 900px) {
+	.emailBar .content {
+		padding: 2% 0 0.5% 3%;
 	}
 }
