--- a/frontend/src/components/PhotoViewer/PhotoViewer.module.css
+++ b/frontend/src/components/PhotoViewer/PhotoViewer.module.css
@@ -6,7 +6,7 @@
 	text-align: center;
 }
 
-h1 {
+.photoViewer h1 {
 	display: inline-block;
 	font-family: var(--personalName_font);	color: white;
 	
@@ -17,7 +17,7 @@ h1 {
 
 
 @media screen and (max-width: 600px) {
-	h1 {
+	.photoViewer h1 {
 		font-size: 2.5rem;
 		margin-top: 2rem;
 	}
@@ -36,7 +36,7 @@ h1 {
 		margin-top: 15%;
 	}
 
-	h1 {
+	.photoViewer h1 {
 		font-size: 3rem;
 	}
 
