--- a/frontend/src/components/ControlPanel/components/PhotoEditor/PhotoEditor.module.css
+++ b/frontend/src/components/ControlPanel/components/PhotoEditor/PhotoEditor.module.css
@@ -34,11 +34,44 @@
 	width: 15rem;
 }
 
-.card img {
+.card > img {
 	width: 100%;
 	height: 100%;
 	object-fit: scale-down;
 	border-radius: 0.5rem;
+	cursor: pointer;
+}
+
+.card > p:hover {
+	cursor: pointer;
+}
+
+.card > .editDescription {
+	color: #000;
+	background: white;
+	width: 100%;
+
+	border: 0;
+	outline: 0;
+	border-radius: 0.3rem;
+}
+
+.card .icons {
+	display: flex;
+	gap: 1rem;
+}
+
+.card .icons .icon {
+	margin: 0.5rem 0;
+	width: 1.5rem;
+	height: 1.5rem;
+	transition-duration: 0.3s;
+}
+
+.card .icons .icon:hover {
+	background: var(--neon_color);
+	border-radius : 0.5rem;
+	padding: 0.2rem;
 	cursor: pointer;
 }
 
@@ -54,6 +87,19 @@
 	font-size: 0.9rem;
 }
 
+.card .editPlace {
+	display: flex;
+	align-items: center;
+}
+.card .editPlace > input {
+	width: 100%;
+	height: 2rem;
+	margin-right: 0.5rem;
+
+	color: #000;
+
+}
+
 .card .features {
 	display: flex;
 	justify-content: space-between;
@@ -61,15 +107,17 @@
 	margin-top: 0.5rem;
 }
 
-.card .features select {
-	color: black;
-	font-size: 1rem;
-
-	width: 8rem;
-	padding: 0.2rem;
-}
-
 .card .features img {
 	width: 1.5rem;
 	height: 1.5rem;
+}
+
+.sucessMessage {
+	margin-left: 0.5rem;
+	color: #30bf26;
+}
+
+.errorMessage {
+	margin-left: 0.5rem;
+	color: red;
 }
